[package]
name = "u-siem-windns"
version = "0.0.3"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Windows Server DNS parser for uSIEM"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","windows","dns"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_windns"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-siem = {version = "0.0"}
chrono = "0.4"