[package]
name = "u-siem-windns"
version = "0.0.5"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Windows Server DNS parser for uSIEM"
repository = "https://github.com/u-siem/u-siem-core"
keywords = ["SIEM", "security", "logs","windows","dns"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_windns"
path = "src/lib.rs"

[dependencies]
u-siem = {version = "0.0"}